# mcp-bouncer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
mcp_bouncer/: __init__.py  guard.py
mcp_guard/: __init__.py  guard.py
tests/: test_guard.py
