[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bouncer"
version = "0.1.0"
description = "Prompt injection blocker for MCP servers and AI agents — zero dependencies, stdlib only"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sergey Boyko", email = "sergeikuch80@gmail.com" }]
keywords = ["mcp", "security", "prompt-injection", "ai", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/sergeeey/mcp-guard"
Repository = "https://github.com/sergeeey/mcp-guard"
Issues = "https://github.com/sergeeey/mcp-guard/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
